# qodeloc

./: .clang-format  .clang-tidy  .dockerignore  .env  .gitignore  ENVIRONMENT.md  LICENSE  Makefile  README.md
core/: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.py
core/include/qodeloc/core/: api.hpp  config.hpp  embedder.hpp  git_watcher.hpp  hierarchy.hpp  indexer.hpp  llm.hpp  module.hpp  parser.hpp  prompt_builder.hpp  retriever.hpp  storage.hpp  vector_store.hpp
core/src/: api.cpp  config.cpp  embedder.cpp  git_watcher.cpp  hierarchy.cpp  indexer.cpp  llm.cpp  main.cpp  parser.cpp  prompt_builder.cpp  retriever.cpp  storage.cpp  vector_store.cpp
core/tests/: api_test.cpp  embedder_test.cpp  git_watcher_test.cpp  hierarchy_test.cpp  indexer_test.cpp  indexer_update_test.cpp  llm_test.cpp  parser_test.cpp  prompt_builder_test.cpp  retriever_test.cpp  storage_test.cpp
docs/: README.md  api-internal.md  api.md  configuration.md  docker.md  mcp-tools.md  performance.md
infra/: README.md  docker-compose.yml
infra/embeddings/: Dockerfile  server.py
infra/litellm/: config.yaml
infra/llama-cpp/: Dockerfile
mcp-adapter/: Dockerfile  README.md  config.example.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
mcp-adapter/src/: auth.ts  config.ts  core-client.ts  index.ts  server.ts  tools.ts  types.ts
mcp-adapter/tests/: auth.test.ts  config.test.ts  server.test.ts
models/: README.md  catalog.json
prompts/: README.md  callers.yaml  deps.yaml  explain.yaml  module.yaml  search.yaml
scripts/: README.md  fetch-testdata-repo.py  install-models.py
testdata/: README.md
testdata/parser/: inheritance.cpp  nested_namespaces.cpp  operators_lambdas.cpp  templates.cpp  variadic_templates.cpp
testdata/parser/dependencies/: common.cpp  common.hpp  derived.cpp
tests/: README.md
tests/e2e/: embeddings_server.py  load_litellm.py  mcp_client.py  run_e2e.py
tests/e2e/fixtures/: README.md
tests/e2e/fixtures/catch2/: README.md  queries.json  queries_smoke.json
